reception details — image spacing fix

--- a/src/styles/components/reception.scss
+++ b/src/styles/components/reception.scss
@@ -70,8 +70,6 @@
   }
 
   .img-wrapper {
-    padding-block-start: var(--layout--gutter);
-
     &--brunch {
       figure:nth-child(1) {
         display: none;
